[gd_scene load_steps=2 format=3 uid="uid://bwxpgiadtvvu5"]

[ext_resource type="Script" path="res://ui.gd" id="1_e6evb"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e6evb")

[node name="P1Health" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="P2Health" type="Label" parent="."]
layout_mode = 0
offset_left = 584.0
offset_top = 280.0
offset_right = 624.0
offset_bottom = 303.0

[node name="P3Health" type="Label" parent="."]
layout_mode = 0
offset_left = 459.0
offset_top = 56.0
offset_right = 499.0
offset_bottom = 79.0

[node name="P4Health" type="Label" parent="."]
layout_mode = 0
offset_left = 77.0
offset_top = 98.0
offset_right = 117.0
offset_bottom = 121.0
